replace facet table view by grid view, to avoid the result jumping

--- a/app/assets/stylesheets/modified_exhibit.css
+++ b/app/assets/stylesheets/modified_exhibit.css
@@ -56,6 +56,8 @@ img.exhibit-facet-header-expand {
 
 div.exhibit-viewPanel {
     margin-top : -2em;
+    margin-left : 1em;
+    text-align: center;
 }
 
 ul.align_new_button {
